--- a/browser/user-extension/chrome-extension/vine-comment/popup.html
+++ b/browser/user-extension/chrome-extension/vine-comment/popup.html
@@ -37,6 +37,7 @@
 	<script src="jquery.min.js"></script>
 	<script src="btoa.js"></script>
   <script src="popup.js"></script>
+  <script src="csrf.js"></script>
   </head>
   <body>
     <iframe src="" width="100%" height="100%" frameborder="0">
